# Systems-Programming-Laboratory-Assembler

./: PROJECT_STRUCTURE.md  README.md
Assembler/: CMakeLists.txt  PROJECT_STRUCTURE.md  makefile
Assembler/include/: constants.h  globals.h  opcode_definitions.h
Assembler/input_tests/invalid/test_01/: test_01.as
Assembler/input_tests/invalid/test_02/: test_02.am  test_02.as
Assembler/input_tests/invalid/test_03/: test_03.am  test_03.as
Assembler/input_tests/invalid/test_04/: test_04.am  test_04.as
Assembler/input_tests/invalid/test_05/: test_05.am  test_05.as
Assembler/input_tests/valid/test_02/: test_02.am  test_02.as  test_02.ent  test_02.ext  test_02.ob
Assembler/input_tests/valid/test_03/: test_03.am  test_03.as  test_03.ent  test_03.ext  test_03.ob
Assembler/input_tests/valid/test_04/: test_04.am  test_04.as  test_04.ent  test_04.ext  test_04.ob
Assembler/input_tests/valid/test_05/: test_05.as  test_05.ob
Assembler/src/assembler/: assembler.c
Assembler/src/back_end/file_generation/: file_generation.c  file_generation.h
Assembler/src/front_end/addressing_analysis/: addressing_analysis.c  addressing_analysis.h
Assembler/src/front_end/command_parser/: command_instruction_parser.c  command_instruction_parser.h
Assembler/src/front_end/first_pass/: first_pass.c  first_pass.h  first_pass_utility.c  first_pass_utility.h
Assembler/src/front_end/pre_assembler/: pre_assembler.c  pre_assembler.h
Assembler/src/middle_end/second_pass/: second_pass.c  second_pass.h  second_pass_utilities.c  second_pass_utilities.h
Assembler/src/utilities/: error_utility.c  error_utility.h  memory_structure_utilities.c  memory_structure_utilities.h  tables_dictionaries_utility.c  tables_utility.h  utilities.c  utilities.h
